--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#skills">Skills</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact me</a>
+              </li>
             </ul>
           </div>
         </div>
