--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" href="images/dlogo.jpg" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="Dennis,css,JavaScript,bootstrap,html,PHP,mysql,jquery,api,REACT" />
+  <meta name="description" content="software developer, php developer" />
+  <meta name="author" content="DENNIS LAWSON" />
 
   <title>DENNIS LAWSON</title>
 
@@ -229,6 +229,7 @@
             <li>LARAVEL</li>
             <li>PHP</li>
             <li>POSTMAN API</li>
+            <li>GIT/GITHUB</li>
             <li>......</li>
           </ul>
         </div>        
@@ -272,7 +273,7 @@
                     LinkedIn
                   </span>
                 </a>
-                <a href="" style="color: #007bff; text-decoration: none;">
+                <a href="tel:+2349095790005" style="color: #007bff; text-decoration: none;">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     Call +234 9095790005
@@ -306,9 +307,10 @@
         <div class="col-xl-6">
           <div class="link_box">
             <a class="" href="index.html" style="color: #f8f9fa;">Home</a>
-            <a class="" href="about.html" style="color: #f8f9fa;">About</a>
-            <a class="" href="portfolio.html" style="color: #f8f9fa;">Portfolio</a>
-            <a class="" href="team.html" style="color: #f8f9fa;">Team</a>
+            <a class="" href="#aboutme" style="color: #f8f9fa;">About</a>
+            <a class="" href="#portfolio" style="color: #f8f9fa;">Portfolio</a>
+            <a class="" href="#skills" style="color: #f8f9fa;">Skills</a>
+            <a class="" href="#contact" style="color: #f8f9fa;">Contact</a>
           </div>
           <div class="link_box mb-3 mt-4">
             <a class="" href="https://github.com/THE-DENNIS" style="color: #f8f9fa;">
