--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <h4>Horizon: Empowering Lives, Building Connections.</h4>
                 <p>My transformative platform for displaced individuals. Offering language learning, community connections, and job matching for a brighter future.</p>
-                <p><a href="" class="btn btn-dark" style="margin: 10px;">View Project</a></p>
+                <p><a href="https://github.com/THE-DENNIS/Project-Horizon" class="btn btn-dark" style="margin: 10px;">View Project</a></p>
             </div>
             <div class="project_box">
                 <div class="img-box">
